new assignments added

--- a/CAPM.ipynb
+++ b/CAPM.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fc81eb51bbce7b65cbee1786ac7a42324f960673ad9c553b9ebcd922c4998338"
+  "signature": "sha256:a5684d6247afc12648f434bed5e6294e39460f341519901d936da9a104a6a2a1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -246,20 +246,120 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# split dependent and independent variable\n",
-      "X = clean_monthly_returns['^GSPC']\n",
-      "y = clean_monthly_returns['FB']\n",
-      "\n",
-      "# Add a constant to the independent value\n",
-      "X1 = sm.add_constant(X)\n",
-      "\n",
-      "# make regression model \n",
-      "model = sm.OLS(y, X1)\n",
-      "\n",
-      "# fit model and print results\n",
-      "results = model.fit()\n",
-      "print(results.summary())"
+      "deviation_matrix = return_data.sub(return_data.mean())\n",
+      "row_count = return_data.count()[0]"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "return_data.mean()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "ABOTT_INDIA                   0.002382\n",
+        "ACC                          -0.000364\n",
+        "AJANTA_PHARMA                -0.000562\n",
+        "APPOLO_HOSPITAL_ENTERPRISE   -0.000983\n",
+        "ASHOK_LEYLAND                 0.000522\n",
+        "ASIAN_PAINTS                  0.000973\n",
+        "AUROBINDO_PHARMA             -0.000652\n",
+        "AVENUES_APARTMENT             0.002604\n",
+        "AXIS_BANK                     0.000376\n",
+        "NCL                          -0.000486\n",
+        "NESTLE_INDIA                  0.001999\n",
+        "NIIT                          0.000363\n",
+        "NTPC                         -0.000165\n",
+        "RBL_BANK                      0.000369\n",
+        "RCOM                         -0.000060\n",
+        "ROYAL_ORCHID_HOTELS           0.002006\n",
+        "BAJAJ_AUTO                   -0.000094\n",
+        "BOSCH                        -0.000977\n",
+        "AMBUJA_CEMENT                -0.000320\n",
+        "AIRTEL                       -0.000128\n",
+        "dtype: float64"
+       ]
+      }
+     ],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "row_count"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 18,
+       "text": [
+        "250"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cov_mat = 1 / float(row_count) * np.matmul(np.transpose(deviation_matrix), deviation_matrix)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "w_mat = np.matmul(np.linalg.inv(cov_mat), np.ones(20)) / np.matmul(np.transpose(np.ones(20)), np.matmul(np.linalg.inv(cov_mat), np.ones(20)))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "sum(w_mat)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        "1.0000000000000002"
+       ]
+      }
+     ],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
